# omniglue

./: CHANGELOG.md  README.md  __init__.py  demo.py  pyproject.toml  requirements.txt
src/omniglue/: __init__.py  dino_extract.py  omniglue_extract.py  superpoint_extract.py  superpoint_pytorch.py  utils.py
